--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Vectorizador a Color (ImageTracer.js) - Sublimación</title>
+  <title>Vectorizador a Color Optimizado - Sublimación</title>
   <style>
     :root{--bg:#0f1724;--card:#0b1220;--muted:#9aa4b2;--accent:#06b6d4}
     body{background:linear-gradient(180deg,#071028 0%,#071826 100%);color:#e6eef6;margin:0;font-family:Inter,system-ui,Segoe UI,Arial;padding:24px}
@@ -21,30 +21,36 @@
     .small{font-size:12px;color:var(--muted)}
     .guide{margin-top:20px;font-size:14px;line-height:1.5;color:#d1d5db}
     .guide h2{font-size:16px;margin:12px 0 6px;color:#06b6d4}
-    .examples{margin-top:16px;display:grid;grid-template-columns:1fr 1fr 1fr;gap:12px}
-    .examples div{background:#1e293b;padding:8px;border-radius:8px;text-align:center;font-size:12px;color:#cbd5e1;display:flex;flex-direction:column;gap:6px;align-items:center}
-    .examples svg{max-width:100%;border-radius:6px;background:#fff}
     #status{margin-top:10px;color:#d1d5db;font-size:13px}
+    .advanced{margin-top:14px;display:none;background:#1e293b;padding:10px;border-radius:8px}
+    .adv-row{margin-bottom:10px}
+    .adv-row label{margin:0 0 4px 0;font-size:12px;color:#9ca3af}
+    .adv-row input[type=range]{width:70%}
+    .adv-row input[type=number]{width:25%;margin-left:5px}
+    #restoreMsg{
+      margin-top:6px;
+      font-size:12px;
+      color:#38bdf8;
+      opacity:0;
+      transition:opacity 0.6s ease;
+    }
+    #restoreMsg.show{opacity:1;}
   </style>
 </head>
 <body>
 <div class="container">
   <header>
-    <img src="data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' width='38' height='38'><rect rx='6' width='38' height='38' fill='%2306b6d4'/><text x='50%' y='54%' font-size='16' font-family='Arial' fill='white' text-anchor='middle' dominant-baseline='middle'>V</text></svg>" width="40" height="40">
-    <div>
-      <h1>Vectorizador a Color para Sublimación</h1>
-      <div class="small">Convierte imágenes a vectores multicolor listos para impresión (SVG/PNG 300 DPI)</div>
-    </div>
+    <h1>Vectorizador a Color para Sublimación</h1>
   </header>
 
   <div class="card grid">
     <div>
       <label>1) Selecciona una imagen</label>
       <input id="fileInput" type="file" accept="image/*">
-      <label>2) Número de colores (2–12): <span id="kVal">6</span></label>
-      <input id="kInput" type="range" min="2" max="12" value="6">
-      <label>3) Nivel de detalle (ltres 0–10): <span id="ltresVal">1</span></label>
-      <input id="ltresInput" type="range" min="0" max="10" value="1">
+      <label>2) Número de colores (2–12): <span id="kVal">4</span></label>
+      <input id="kInput" type="range" min="2" max="12" value="4">
+      <label>3) Nivel de detalle (ltres 0–10): <span id="ltresVal">0.5</span></label>
+      <input id="ltresInput" type="range" min="0" max="10" step="0.1" value="0.5">
       <div style="margin-top:12px">
         <button id="vectorizeBtn">Vectorizar a color</button>
       </div>
@@ -53,31 +59,52 @@
         <button id="exportPng" disabled>Exportar PNG (300 DPI)</button>
       </div>
 
-      <div id="status" >Estado: esperando imagen</div>
+      <div style="margin-top:12px">
+        <button id="toggleAdvanced">⚙️ Mostrar ajustes avanzados</button>
+      </div>
+
+      <div class="advanced" id="advancedPanel">
+        <div class="adv-row">
+          <label>pathomit (ignorar trazos pequeños)</label>
+          <input id="pathomitRange" type="range" min="0" max="50" value="8">
+          <input id="pathomitNum" type="number" min="0" max="50" value="8">
+        </div>
+        <div class="adv-row">
+          <label>roundcoords (redondeo coordenadas)</label>
+          <input id="roundRange" type="range" min="0" max="10" step="0.5" value="2">
+          <input id="roundNum" type="number" min="0" max="10" step="0.5" value="2">
+        </div>
+        <div class="adv-row">
+          <label>blurdelta (fusión de bordes)</label>
+          <input id="blurRange" type="range" min="0" max="50" value="20">
+          <input id="blurNum" type="number" min="0" max="50" value="20">
+        </div>
+        <div class="adv-row">
+          <label>qtres (umbral curvas)</label>
+          <input id="qtresRange" type="range" min="0" max="10" step="0.1" value="1">
+          <input id="qtresNum" type="number" min="0" max="10" step="0.1" value="1">
+        </div>
+        <div class="adv-row">
+          <label>scale (escala SVG)</label>
+          <input id="scaleRange" type="range" min="0.5" max="3" step="0.1" value="1">
+          <input id="scaleNum" type="number" min="0.5" max="3" step="0.1" value="1">
+        </div>
+        <div style="margin-top:10px">
+          <button id="restoreDefaults">🔄 Restaurar valores recomendados</button>
+          <div id="restoreMsg"></div>
+        </div>
+      </div>
+
+      <div id="status">Estado: esperando imagen</div>
 
       <div class="guide">
-        <h2>Guía rápida de uso</h2>
-        <p><strong>Logos / Íconos:</strong><br> Colores = 2–4 · Detalle = bajo.</p>
-        <p><strong>Ilustraciones / Dibujos:</strong><br> Colores = 5–8 · Detalle = medio.</p>
-        <p><strong>Fotografías / Diseños complejos:</strong><br> Colores = 8–12 · Detalle = alto.</p>
-        <p><strong>Consejo:</strong> Para sublimar, exporta siempre en PNG a 300 DPI y ajusta el tamaño en pulgadas según la prenda.</p>
-        <div class="examples">
-          <div>
-            <div><strong>2 colores</strong></div>
-            <div id="ex2">(ejemplo se generará aquí)</div>
-            <button id="dl2" disabled>Descargar SVG 2</button>
-          </div>
-          <div>
-            <div><strong>6 colores</strong></div>
-            <div id="ex6">(ejemplo se generará aquí)</div>
-            <button id="dl6" disabled>Descargar SVG 6</button>
-          </div>
-          <div>
-            <div><strong>10 colores</strong></div>
-            <div id="ex10">(ejemplo se generará aquí)</div>
-            <button id="dl10" disabled>Descargar SVG 10</button>
-          </div>
-        </div>
+        <h2>Guía rápida</h2>
+        <p><strong>Diseños planos (sublimación):</strong><br>
+        Colores = 4 · Detalle = 0.5.</p>
+        <p><strong>Ilustraciones:</strong><br>
+        Colores = 6–8 · Detalle = 1–2.</p>
+        <p><strong>Fotografías:</strong><br>
+        Colores = 8–12 · Detalle = 2–4.</p>
       </div>
     </div>
 
@@ -87,179 +114,120 @@
   </div>
 </div>
 
-<!-- ImageTracer.js desde CDN -->
 <script src="https://cdn.jsdelivr.net/npm/imagetracerjs@1.2.6/imagetracer_v1.2.6.js"></script>
 <script>
   const fileInput=document.getElementById('fileInput');
-  const kInput=document.getElementById('kInput');
-  const kVal=document.getElementById('kVal');
-  const ltresInput=document.getElementById('ltresInput');
-  const ltresVal=document.getElementById('ltresVal');
+  const kInput=document.getElementById('kInput'); const kVal=document.getElementById('kVal');
+  const ltresInput=document.getElementById('ltresInput'); const ltresVal=document.getElementById('ltresVal');
   const vectorizeBtn=document.getElementById('vectorizeBtn');
   const svgPreview=document.getElementById('svgPreview');
   const downloadSvg=document.getElementById('downloadSvg');
   const exportPng=document.getElementById('exportPng');
-  const ex2=document.getElementById('ex2');
-  const ex6=document.getElementById('ex6');
-  const ex10=document.getElementById('ex10');
-  const dl2=document.getElementById('dl2');
-  const dl6=document.getElementById('dl6');
-  const dl10=document.getElementById('dl10');
   const status=document.getElementById('status');
+  const advPanel=document.getElementById('advancedPanel');
+  const toggleAdv=document.getElementById('toggleAdvanced');
+  const restoreDefaults=document.getElementById('restoreDefaults');
+  const restoreMsg=document.getElementById('restoreMsg');
 
-  let loadedImage=null; let lastSvg=''; let lastEx2='', lastEx6='', lastEx10='';
+  // advanced controls
+  const pathomitRange=document.getElementById('pathomitRange'), pathomitNum=document.getElementById('pathomitNum');
+  const roundRange=document.getElementById('roundRange'), roundNum=document.getElementById('roundNum');
+  const blurRange=document.getElementById('blurRange'), blurNum=document.getElementById('blurNum');
+  const qtresRange=document.getElementById('qtresRange'), qtresNum=document.getElementById('qtresNum');
+  const scaleRange=document.getElementById('scaleRange'), scaleNum=document.getElementById('scaleNum');
+
+  let loadedImage=null,lastSvg='';
 
   kInput.addEventListener('input',()=>kVal.textContent=kInput.value);
   ltresInput.addEventListener('input',()=>ltresVal.textContent=ltresInput.value);
 
-  fileInput.addEventListener('change', e=>{
-    const f=e.target.files[0];
-    if(!f) return;
+  function sync(r,n){r.addEventListener('input',()=>n.value=r.value);n.addEventListener('input',()=>r.value=n.value);}
+  sync(pathomitRange,pathomitNum); sync(roundRange,roundNum);
+  sync(blurRange,blurNum); sync(qtresRange,qtresNum); sync(scaleRange,scaleNum);
+
+  toggleAdv.onclick=()=>{
+    advPanel.style.display=(advPanel.style.display==='none'||advPanel.style.display==='')?'block':'none';
+    toggleAdv.textContent=advPanel.style.display==='block'?'⚙️ Ocultar ajustes avanzados':'⚙️ Mostrar ajustes avanzados';
+  };
+
+  restoreDefaults.onclick=()=>{
+    pathomitRange.value=pathomitNum.value=8;
+    roundRange.value=roundNum.value=2;
+    blurRange.value=blurNum.value=20;
+    qtresRange.value=qtresNum.value=1;
+    scaleRange.value=scaleNum.value=1;
+    restoreMsg.textContent='Valores restaurados: pathomit=8 · roundcoords=2 · blurdelta=20 · qtres=1 · scale=1';
+    restoreMsg.classList.add('show');
+    setTimeout(()=>{restoreMsg.classList.remove('show')},5000);
+  };
+
+  fileInput.addEventListener('change',e=>{
+    const f=e.target.files[0];if(!f)return;
     const img=new Image();
-    img.onload = ()=>{ loadedImage = img; status.textContent = 'Imagen cargada. Generando ejemplos...'; generateExamples(); };
-    img.onerror = ()=>{ alert('No se pudo cargar la imagen. Prueba con otro archivo.'); };
-    img.src = URL.createObjectURL(f);
+    img.onload=()=>{loadedImage=img;status.textContent='Imagen cargada. Pulsa "Vectorizar".';};
+    img.src=URL.createObjectURL(f);
   });
 
-  // toma una imagen y devuelve ImageData escalado al maxDim
-  function sampleImageToImageData(img, maxDim){
-    const canvas = document.createElement('canvas');
-    const ctx = canvas.getContext('2d');
-    const scale = Math.min(1, maxDim / Math.max(img.width, img.height));
-    canvas.width = Math.round(img.width * scale);
-    canvas.height = Math.round(img.height * scale);
-    ctx.clearRect(0,0,canvas.width,canvas.height);
-    ctx.drawImage(img, 0, 0, canvas.width, canvas.height);
+  function sampleImage(img,maxDim){
+    const canvas=document.createElement('canvas');
+    const ctx=canvas.getContext('2d');
+    const scale=Math.min(1,maxDim/Math.max(img.width,img.height));
+    canvas.width=img.width*scale;canvas.height=img.height*scale;
+    ctx.drawImage(img,0,0,canvas.width,canvas.height);
     return ctx.getImageData(0,0,canvas.width,canvas.height);
   }
 
-  // opciones recomendadas para ImageTracer.imagedataToSVG
-  function buildOptions(K, ltres){
+  function buildOptions(K,ltres){
     return {
-      numberofcolors: K,
-      colorsampling: 2,          // usar sampling determinístico
-      colorquantcycles: 3,      // ciclos de quantización
-      mincolorratio: 0.0005,    // permitir colores pequeños
-      ltres: Math.max(0.1, ltres), // line threshold (1 ~ normal). no dejar 0 exacto
-      qtres: 1,
-      pathomit: 1,              // 1 mantiene trazados pequeños; sube si quieres limpiar
-      blurradius: 0,
-      blurdelta: 20,
-      scale: 1,
-      roundcoords: 1,
-      viewbox: true,
-      desc: false
+      numberofcolors:K,
+      ltres:Math.max(0.1,ltres),
+      qtres:parseFloat(qtresNum.value),
+      pathomit:parseInt(pathomitNum.value),
+      roundcoords:parseFloat(roundNum.value),
+      blurdelta:parseInt(blurNum.value),
+      scale:parseFloat(scaleNum.value),
+      viewbox:true,
+      desc:false
     };
   }
 
-  // vectoriza a partir de ImageData (usa imagedataToSVG para mejor control)
-  function imagedataVectorize(imgData, options){
-    // imagedataToSVG es síncrono y devuelve string
-    try {
-      return ImageTracer.imagedataToSVG(imgData, options);
-    } catch(e) {
-      console.error('Error en imagedataToSVG:', e);
-      return '';
-    }
+  function vectorizeImage(img,K,ltres,maxDim){
+    const imgData=sampleImage(img,maxDim);
+    return ImageTracer.imagedataToSVG(imgData,buildOptions(K,ltres));
   }
 
-  async function vectorizeCustom(K, ltres, maxDim){
-    if(!loadedImage) return '';
-    // preparar ImageData a la resolución deseada
-    const imgData = sampleImageToImageData(loadedImage, maxDim);
-    const opts = buildOptions(K, ltres);
-    // trazar usando ImageData
-    const svg = imagedataVectorize(imgData, opts);
-    return svg || '';
+  function vectorize(){
+    if(!loadedImage){alert('Carga una imagen primero');return;}
+    status.textContent='Vectorizando...';
+    const K=parseInt(kInput.value),ltres=parseFloat(ltresInput.value)||0.5;
+    lastSvg=vectorizeImage(loadedImage,K,ltres,1200);
+    svgPreview.innerHTML=lastSvg;
+    downloadSvg.disabled=false;exportPng.disabled=false;
+    status.textContent='Vectorización lista.';
   }
+  vectorizeBtn.onclick=vectorize;
 
-  // Genera las mini-previews (resolución pequeña para UX)
-  async function generateExamples(){
-    if(!loadedImage) return;
-    status.textContent = 'Generando ejemplos (2,6,10 colores)...';
-    ex2.innerHTML = 'Generando...';
-    ex6.innerHTML = 'Generando...';
-    ex10.innerHTML = 'Generando...';
-    dl2.disabled = dl6.disabled = dl10.disabled = true;
-    // usar maxDim pequeño para vistas
-    lastEx2 = await vectorizeCustom(2, 1.0, 400);
-    lastEx6 = await vectorizeCustom(6, 1.0, 400);
-    lastEx10 = await vectorizeCustom(10, 1.0, 400);
-    ex2.innerHTML = lastEx2 || '(error)';
-    ex6.innerHTML = lastEx6 || '(error)';
-    ex10.innerHTML = lastEx10 || '(error)';
-    dl2.disabled = !lastEx2;
-    dl6.disabled = !lastEx6;
-    dl10.disabled = !lastEx10;
-    status.textContent = 'Ejemplos listos. Ajusta parámetros y pulsa "Vectorizar a color".';
-  }
-
-  // Vectorizado final: usar mayor resolución para más detalle
-  async function vectorize(){
-    if(!loadedImage){ alert('Primero carga una imagen'); return; }
-    status.textContent = 'Vectorizando imagen (esto puede tardar unos segundos)...';
-    vectorizeBtn.disabled = true;
-    const K = parseInt(kInput.value, 10);
-    const ltres = parseFloat(ltresInput.value) || 1;
-    // para el resultado final usamos maxDim mayor (ej. 1200 px). Puedes ajustar.
-    const finalMaxDim = 1200;
-    lastSvg = await vectorizeCustom(K, ltres, finalMaxDim);
-    if(!lastSvg){
-      status.textContent = 'Error: no se generó SVG. Revisa la consola del navegador.';
-      vectorizeBtn.disabled = false;
-      return;
-    }
-    svgPreview.innerHTML = lastSvg;
-    downloadSvg.disabled = false;
-    exportPng.disabled = false;
-    status.textContent = 'Vectorización completada. Descarga o exporta.';
-    vectorizeBtn.disabled = false;
-  }
-
-  vectorizeBtn.onclick = vectorize;
-
-  function downloadFile(svgStr, filename){
-    if(!svgStr) return;
-    const blob = new Blob([svgStr], {type: 'image/svg+xml'});
-    const a = document.createElement('a');
-    a.href = URL.createObjectURL(blob);
-    a.download = filename;
-    document.body.appendChild(a);
-    a.click();
-    a.remove();
-  }
-
-  downloadSvg.onclick = ()=> downloadFile(lastSvg, 'design_color.svg');
-  dl2.onclick = ()=> downloadFile(lastEx2, 'design_2colors.svg');
-  dl6.onclick = ()=> downloadFile(lastEx6, 'design_6colors.svg');
-  dl10.onclick = ()=> downloadFile(lastEx10, 'design_10colors.svg');
-
-  // Exportar a PNG usando canvas (300 DPI si quieres: aquí usamos escala fija; cambia si necesitas)
-  exportPng.onclick = ()=>{
-    if(!lastSvg){ alert('No hay SVG generado'); return; }
-    // para conservar nitidez en sublimación, pedimos 300 DPI según tamaño que definas.
-    // El usuario final puede cambiar w/h; aquí usaremos 3000x3000 por ejemplo (10x10 in @300dpi).
-    const pxW = 3000, pxH = 3000;
-    const img = new Image();
-    img.onload = () => {
-      const canvas = document.createElement('canvas');
-      canvas.width = pxW; canvas.height = pxH;
-      const ctx = canvas.getContext('2d');
-      ctx.fillStyle = '#ffffff'; ctx.fillRect(0,0,pxW,pxH);
-      ctx.drawImage(img, 0, 0, pxW, pxH);
-      canvas.toBlob((b) => {
-        const a = document.createElement('a');
-        a.href = URL.createObjectURL(b);
-        a.download = 'design_300dpi.png';
-        document.body.appendChild(a);
-        a.click();
-        a.remove();
-      }, 'image/png', 1.0);
-    };
-    img.onerror = (e)=>{ console.error('Error cargando SVG para exportar PNG', e); alert('No se pudo rasterizar el SVG. Revisa la consola.'); };
-    img.src = 'data:image/svg+xml;base64,' + btoa(unescape(encodeURIComponent(lastSvg)));
+  downloadSvg.onclick=()=>{
+    const blob=new Blob([lastSvg],{type:'image/svg+xml'});
+    const a=document.createElement('a');
+    a.href=URL.createObjectURL(blob);a.download='design_color.svg';a.click();
   };
 
+  exportPng.onclick=()=>{
+    if(!lastSvg){alert('No hay SVG');return;}
+    const pxW=3000,pxH=3000;
+    const img=new Image();
+    img.onload=()=>{
+      const canvas=document.createElement('canvas');canvas.width=pxW;canvas.height=pxH;
+      const ctx=canvas.getContext('2d');ctx.fillStyle='#fff';ctx.fillRect(0,0,pxW,pxH);
+      ctx.drawImage(img,0,0,pxW,pxH);
+      canvas.toBlob(b=>{
+        const a=document.createElement('a');a.href=URL.createObjectURL(b);
+        a.download='design_300dpi.png';a.click();
+      },'image/png',1.0);
+    };
+    img.src='data:image/svg+xml;base64,'+btoa(unescape(encodeURIComponent(lastSvg)));
+  };
 </script>
 </body>
 </html>
